# Raytracer

./: .gitignore  CMakeLists.txt
include/: AABB.h  AssetManager.h  BVHNode.h  Camera.h  CheckeredTexture.h  DielectricMaterial.h  Handles.h  IFrontend.h  IHit.h  IMaterial.h  ITexture.h  Image.h  ImageTexture.h  Interval.h  LambertianMaterial.h  MetalMaterial.h  Parallelogram.h  PixColor.h  RandomFunc.h  Ray.h  RaylibFrontend.h  Raytracer.h  SolidTexture.h  Sphere.h  VectorHelpers.h  World.h
src/: AssetManager.cpp  BVHNode.cpp  Camera.cpp  DielectricMaterial.cpp  IHit.cpp  Image.cpp  Interval.cpp  LambertianMaterial.cpp  MetalMaterial.cpp  Parallelogram.cpp  Ray.cpp  RaylibFrontend.cpp  Raytracer.cpp  Sphere.cpp  World.cpp  main.cpp
